cluster/apps/momnt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: momnt
  namespace: momnt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: momnt
  template:
    metadata:
      labels:
        app: momnt
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 2000
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        readOnlyRootFilesystem: true
      containers:
        - name: momnt
          image: soulsbros/momnt:arm
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
