cluster/apps/momnt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: momnt
  namespace: momnt
spec:
  selector:
    app: momnt
  ports:
    - port: 3000
