cluster/apps/momnt/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: momnt
  namespace: momnt
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`momnt.soulsbros.ch`)
      kind: Rule
      services:
        - name: momnt
          port: 3000
    - match: Host(`momnt.ch`)
      kind: Rule
      services:
        - name: momnt
          port: 3000
