cluster/apps/momnt/np-default-deny.yaml
# Default deny all ingress and egress traffic in the namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: momnt
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
